Monkey patch executing.
I hate this. I need to make the saucer bundler BETTER.